--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Geoweb Application</h1>
         <div id="connection">
-            <label for="host">MQTTXX Host:</label>
+            <label for="host">MQTTXXX Host:</label>
             <input type="text" id="host" placeholder="test.mosquitto.org">
             <label for="port">MQTT Port:</label>
             <input type="text" id="port" placeholder="8080">
