--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>Geoweb Application</h1>
         <div id="connection">
             <div id="connection">
-                <p id="hostStatement"></p> 
-                <p id="portStatement"></p> </div>
+                <p id="test.mosquitto.org"></p> 
+                <p id="8081"></p> </div>
                 <button id="start">Start Connection</button>
                 <button id="end">End Connection</button>
                 <p id="status"></p>
