--- a/index.html
+++ b/index.html
@@ -11,26 +11,25 @@
     <div class="container">
         <h1>Geoweb Application</h1>
         <div id="connection">
-            <div id="connection">
-                <p id="test.mosquitto.org"></p> 
-                <p id="8081"></p> </div>
-                <button id="start">Start Connection</button>
-                <button id="end">End Connection</button>
-                <p id="status"></p>
-            </div>            
-        </div>
-        <div id="publish">
-            <label for="topic">Topic:</label>
-            <input type="text" id="topic" placeholder="topic35/pjt551">
-            <label for="message">Message:</label>
-            <input type="text" id="message" placeholder="Enter Message">
-            <button id="publishBtn">Publish Message</button>
-        </div>
-        <div id="share">
-            <button id="shareBtn">Share My Status</button>
-        </div>
-        <div id="map"></div>
+            <div id="hostStatement"></div>
+            <div id="portStatement"></div>
+            <button id="start">Start Connection</button>
+            <button id="end">End Connection</button>
+            <p id="status"></p>
+        </div>            
     </div>
+    <div id="publish">
+        <label for="topic">Topic:</label>
+        <input type="text" id="topic" placeholder="topic35/pjt551">
+        <label for="message">Message:</label>
+        <input type="text" id="message" placeholder="Enter Message">
+        <button id="publishBtn">Publish Message</button>
+    </div>
+    <div id="share">
+        <button id="shareBtn">Share My Status</button>
+    </div>
+    <div id="map"></div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
     <script src="script.js"></script>
