--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <div class="container">
         <h1>Geoweb Application</h1>
         <div id="connection">
-            <div id="hostStatement"></div>
-            <div id="portStatement"></div>
-            <button id="start">Start Connection</button>
-            <button id="end">End Connection</button>
-            <p id="status"></p>
+            <div id="connection">
+                <input type="text" id="host" placeholder="Host">
+                <input type="number" id="port" placeholder="Port">
+                <button id="start">Start Connection</button>
+                <button id="end">End Connection</button>
+                <p id="status"></p>
+            </div>
         </div>            
     </div>
     <div id="publish">
