--- a/index.html
+++ b/index.html
@@ -11,27 +11,24 @@
     <div class="container">
         <h1>Geoweb Application</h1>
         <div id="connection">
-            <div id="connection">
-                <input type="text" id="host" placeholder="Host">
-                <input type="number" id="port" placeholder="Port">
-                <button id="start">Start Connection</button>
-                <button id="end">End Connection</button>
-                <p id="status"></p>
-            </div>
-        </div>            
+            <p id="hostStatement">Connecting to Host: test.mosquitto.org</p>
+            <p id="portStatement">Connecting to Port: 8081</p>
+            <button id="start">Start Connection</button>
+            <button id="end">End Connection</button>
+            <p id="status"></p>
+        </div>
+        <div id="publish">
+            <label for="topic">Topic:</label>
+            <input type="text" id="topic" placeholder="topic35/pjt551">
+            <label for="message">Message:</label>
+            <input type="text" id="message" placeholder="Enter Message">
+            <button id="publishBtn">Publish Message</button>
+        </div>
+        <div id="share">
+            <button id="shareBtn">Share My Status</button>
+        </div>
+        <div id="map"></div>
     </div>
-    <div id="publish">
-        <label for="topic">Topic:</label>
-        <input type="text" id="topic" placeholder="topic35/pjt551">
-        <label for="message">Message:</label>
-        <input type="text" id="message" placeholder="Enter Message">
-        <button id="publishBtn">Publish Message</button>
-    </div>
-    <div id="share">
-        <button id="shareBtn">Share My Status</button>
-    </div>
-    <div id="map"></div>
-    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
     <script src="script.js"></script>
