--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <h1>Geoweb Application</h1>
         <div id="connection">
-            <p id="hostStatement">Connecting to Host: test.mosquitto.org</p>
-            <p id="portStatement">Connecting to Port: 8081</p>
+            <label for="host">Host:</label>
+            <label for="port">Port:</label>
             <button id="start">Start Connection</button>
             <button id="end">End Connection</button>
             <p id="status"></p>
