--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <h1>Geoweb Application</h1>
         <div id="connection">
-            <label for="host">Host:</label>
-            <label for="port">Port:</label>
+            <label for="host">Host: test.mosquitto.org</label>
+            <label for="port">Port: 8081</label>
             <button id="start">Start Connection</button>
             <button id="end">End Connection</button>
             <p id="status"></p>
